[package]
name = "autoproxy"
version = "0.1.0"
authors = ["Michael Beckler <mcbeckler@gmail.com>"]
edition = "2018"
description = """
Tool for automatically setting the `http_proxy`, `https_proxy`, and `no_proxy`
environment variables by discovering which proxies are available,
or if a proxy is even needed at all."""

[dependencies]
ping = "0.2"
toml = "0.5"
confy = { git = "https://github.com/rust-cli/confy" }
serde = "1.0"
serde_derive = "1.0"
structopt = "0.3"